--- a/KnowItAll/TabBar.storyboard
+++ b/KnowItAll/TabBar.storyboard
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Rwo-xT-QG4">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1611" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Rwo-xT-QG4">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -35,7 +35,7 @@
         <scene sceneID="9dT-nh-Kzs">
             <objects>
                 <viewControllerPlaceholder storyboardName="HomePage" id="Qjg-ud-OSm" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Home Page" id="bdt-ub-TAZ"/>
+                    <tabBarItem key="tabBarItem" title="Home Page" image="home" selectedImage="home" id="bdt-ub-TAZ"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ARZ-Ap-IEH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -82,4 +82,7 @@
             <point key="canvasLocation" x="-1374" y="666"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="home" width="30" height="30"/>
+    </resources>
 </document>
