--- a/KnowItAll/HomePage.storyboard
+++ b/KnowItAll/HomePage.storyboard
@@ -21,10 +21,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fgi-n4-TgA">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fgi-n4-TgA">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="27"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.76862745098039209" green="0.11764705882352941" blue="0.22745098039215686" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="27" id="oKe-PH-WKJ"/>
+                                </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="puX-sx-CA2">
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
@@ -215,15 +217,18 @@
                         </subviews>
                         <constraints>
                             <constraint firstItem="e3P-vB-iSr" firstAttribute="leading" secondItem="UXB-QJ-IzI" secondAttribute="leading" id="2OF-pH-hin"/>
+                            <constraint firstAttribute="trailing" secondItem="fgi-n4-TgA" secondAttribute="trailing" id="DFy-ZE-OhS"/>
+                            <constraint firstItem="fgi-n4-TgA" firstAttribute="top" secondItem="UXB-QJ-IzI" secondAttribute="top" id="L5y-Hd-hNd"/>
                             <constraint firstItem="puX-sx-CA2" firstAttribute="leading" secondItem="UXB-QJ-IzI" secondAttribute="leading" id="Rpt-NA-gqT"/>
                             <constraint firstAttribute="trailing" secondItem="puX-sx-CA2" secondAttribute="trailing" id="fSg-RG-5eb"/>
                             <constraint firstItem="e3P-vB-iSr" firstAttribute="top" secondItem="Oz3-Qq-cP5" secondAttribute="bottom" id="hsg-oe-KMB"/>
                             <constraint firstItem="eNH-Nk-che" firstAttribute="top" secondItem="puX-sx-CA2" secondAttribute="bottom" id="iZc-ol-qSA"/>
+                            <constraint firstItem="fgi-n4-TgA" firstAttribute="leading" secondItem="UXB-QJ-IzI" secondAttribute="leading" id="nac-cv-3UK"/>
                             <constraint firstAttribute="trailing" secondItem="e3P-vB-iSr" secondAttribute="trailing" id="xxD-Cb-AGc"/>
                             <constraint firstItem="puX-sx-CA2" firstAttribute="top" secondItem="e3P-vB-iSr" secondAttribute="bottom" id="zWR-iE-BEZ"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Home Page" selectedImage="home" id="OqG-vs-uPI">
+                    <tabBarItem key="tabBarItem" title="Home Page" image="home" selectedImage="home" id="OqG-vs-uPI">
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="0.0"/>
                     </tabBarItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
